overflow issue resolve, modifiying media query

--- a/mystyle.css
+++ b/mystyle.css
@@ -53,6 +53,7 @@ h4 {
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
+  caret-color: transparent;
 }
 
 #main-wrapper {
@@ -143,7 +144,6 @@ h4 {
   display: flex;
   flex-wrap: wrap;
   background-color: var(--col-sky-medium);
-  caret-color: transparent;
 }
 
 /* -------- mini grid, info grid */
@@ -225,15 +225,15 @@ h4 {
 
 @media screen and (min-width: 280px) {
   #game-grid {
-    width: 200px;
-    height: 400px;
+    width: 180px;
+    height: 360px;
   }
   .game-cell {
-    width: 20px;
-    height: 20px;
+    width: 18px;
+    height: 18px;
   }
   #direction-controls-wrapper {
-    width: 200px;
+    width: 180px;
   }
   .direction-button {
     width: 3rem;
@@ -242,8 +242,13 @@ h4 {
 
   #info-grid {
     width: 60px;
-    height: 400px;
+    height: 360px;
   }
+
+  #info-grid h4 {
+    font-size: x-small;
+  }
+
   .mini-grid div {
     height: 15px;
     width: 15px;
@@ -255,6 +260,9 @@ h4 {
 
   .other-button {
     height: 2.2rem;
+  }
+  .other-button {
+    font-size: x-small;
   }
 }
 @media screen and (min-width: 320px) {
@@ -273,25 +281,25 @@ h4 {
 
 @media screen and (min-width: 360px) {
   #game-grid {
-    width: 240px;
-    height: 480px;
+    width: 220px;
+    height: 440px;
   }
   .game-cell {
-    width: 24px;
-    height: 24px;
+    width: 22px;
+    height: 22px;
   }
   #direction-controls-wrapper {
-    width: 240px;
+    width: 220px;
   }
   .direction-button {
-    width: 3.75rem;
+    width: 3.25rem;
     height: 2.5rem;
   }
   #right-button {
     margin-left: 6rem;
   }
   #info-grid {
-    height: 480px;
+    height: 440px;
   }
 }
 
@@ -309,7 +317,7 @@ h4 {
   }
   .direction-button {
     width: 4rem;
-    height: 4rem;
+    height: 3rem;
   }
   #info-grid {
     width: 80px;
@@ -365,7 +373,44 @@ h4 {
   }
 }
 
-@media screen and (min-width: 760px) {
+@media screen and (min-width: 760px) and (orientation: landscape) {
+  #game-grid {
+    width: 300px;
+    height: 600px;
+  }
+  .game-cell {
+    width: 30px;
+    height: 30px;
+  }
+  #direction-controls-wrapper {
+    width: 300px;
+  }
+  .direction-button {
+    width: 4rem;
+    height: 3rem;
+  }
+  #info-grid {
+    width: 104px;
+    height: 600px;
+    margin-left: 2.5rem;
+  }
+  .mini-grid div {
+    height: 26px;
+    width: 26px;
+  }
+  #other-control-wrapper {
+    width: 104px;
+    margin-left: 2.5rem;
+  }
+  #right-button {
+    margin-left: 8rem;
+  }
+  .mt1 {
+    margin-top: 1.5rem;
+  }
+}
+
+@media screen and (min-width: 1600px) {
   #game-grid {
     width: 360px;
     height: 720px;
